Edit dtos, entities, intefaces, services in bll. Have some work with database, add configs, repository etc. Fix some troubles. Add job configs, service extensions and call some services in program.cs in TikTok_Server project

--- a/TikTok_Server/TikTok_Server.csproj
+++ b/TikTok_Server/TikTok_Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,7 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <PackageReference Include="Hangfire.AspNetCore" Version="1.7.37" />
+	  <PackageReference Include="Hangfire.Core" Version="1.7.37" />
+	  <PackageReference Include="Hangfire.SqlServer" Version="1.7.37" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+  </ItemGroup>
+	
+	<ItemGroup>
+		<ProjectReference Include="..\business_logic\business_logic.csproj" />
+		<ProjectReference Include="..\data_access\data_access.csproj" />
+	</ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
