--- a/data_access/data_access.csproj
+++ b/data_access/data_access.csproj
@@ -10,6 +10,7 @@
 
 	
   <ItemGroup>
+	  <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.20" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.20" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
@@ -18,7 +19,6 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-    <Folder Include="repository\" />
   </ItemGroup>
 
   <ItemGroup>
