added connstring to virtual db

--- a/TikTok_Server/appsettings.json
+++ b/TikTok_Server/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TikTokDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "TikTokDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TikTokDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "SomeeDb": "workstation id=TikTokDb.mssql.somee.com;packet size=4096;user id=flexer_SQLLogin_1;pwd=8sfa2hz4yj;data source=TikTokDb.mssql.somee.com;persist security info=False;initial catalog=TikTokDb;TrustServerCertificate=True"
+  },
+  "JwtOptions": {
+    "Issuer": "TikiToken",
+    "Key": "erhgugkayuergfaeur-ghiraekuyare-reaguhaekuyfghare",
+    "RefreshTokenLifetimeInDays": 4
   }
 }
